Add Redstone Controller peripheral for Create's Redstone Link network
- New block: Redstone Controller (redstone_controller peripheral, 8 Lua functions)
- VirtualRedstoneLink implements Create's IRedstoneLinkable interface
- Unlimited frequency channels managed from Lua scripts, no GUI
- setOutput/getInput/getOutput/removeChannel/getChannels/setAllOutputs/clearChannels/getPosition
- Channels persist across server restarts (NBT save/load)
- Verified in-game: transmit output received by physical Create Redstone Links
- Updated MOD_DOCUMENTATION.md and README.md with full Redstone Controller docs

--- a/src/main/resources/assets/logiclink/lang/en_us.json
+++ b/src/main/resources/assets/logiclink/lang/en_us.json
@@ -14,5 +14,6 @@
     "logiclink.sensor.tuned": "Sensor frequency copied!",
     "logiclink.sensor.cleared": "Sensor frequency cleared",
     "logiclink.sensor.connected": "Sensor connected to logistics network",
-    "logiclink.sensor.new_unlinked": "Sensor placed (not linked to any network)"
+    "logiclink.sensor.new_unlinked": "Sensor placed (not linked to any network)",
+    "block.logiclink.redstone_controller": "Redstone Controller"
 }
