Add motors, Create Storage integration, Ponder scenes, documentation update
- Creative Logic Motor: CC-controlled rotation source (16 Lua functions)
- Logic Motor: CC-controlled rotation modifier with directional markers (17 functions)
  - Orange stripe = drive input, light blue = CC output
  - Debounced kinematics to prevent block popping from rapid Lua calls
- Create Storage soft dependency: storage_controller (14) + storage_interface (10)
- Ponder scenes and schematics for all 5 blocks (12 tags, 5 scenes)
- mainThread=true on all 86 @LuaFunction methods across 9 peripherals
- Updated README.md and MOD_DOCUMENTATION.md with full API reference

--- a/src/main/resources/assets/logiclink/lang/en_us.json
+++ b/src/main/resources/assets/logiclink/lang/en_us.json
@@ -2,8 +2,12 @@
     "itemGroup.logiclink": "Logic Link",
     "block.logiclink.logic_link": "Logic Link",
     "block.logiclink.logic_sensor": "Logic Sensor",
-    "logiclink.linked.tooltip": "Tuned to logistics network",
-    "logiclink.linked.tooltip_clear": "Right-click air to clear",
+    "block.logiclink.redstone_controller": "Redstone Controller",
+    "block.logiclink.creative_logic_motor": "Creative Logic Motor",
+    "block.logiclink.logic_motor": "Logic Motor",
+
+    "logiclink.linked.tooltip": "Logic Link : Linked",
+    "logiclink.linked.tooltip_clear": "Right-click in air to clear",
     "logiclink.linked.tuned": "Frequency copied!",
     "logiclink.linked.cleared": "Frequency cleared",
     "logiclink.linked.connected": "Connected to logistics network",
@@ -11,9 +15,75 @@
     "logiclink.linked.protected": "This network is protected",
     "logiclink.sensor.tooltip": "Tuned to logistics network",
     "logiclink.sensor.tooltip_clear": "Right-click air to clear",
+    "logiclink.sensor.linked.tooltip": "Logic Sensor : Linked",
+    "logiclink.sensor.linked.tooltip_clear": "Right-click in air to clear",
     "logiclink.sensor.tuned": "Sensor frequency copied!",
     "logiclink.sensor.cleared": "Sensor frequency cleared",
     "logiclink.sensor.connected": "Sensor connected to logistics network",
     "logiclink.sensor.new_unlinked": "Sensor placed (not linked to any network)",
-    "block.logiclink.redstone_controller": "Redstone Controller"
+
+    "logiclink.ponder.tag.sensor_inventories": "Inventory Blocks",
+    "logiclink.ponder.tag.sensor_inventories.description": "The Logic Sensor reads inventory contents from chests, barrels, vaults, depots, and more",
+    "logiclink.ponder.tag.sensor_kinetics": "Kinetic Components",
+    "logiclink.ponder.tag.sensor_kinetics.description": "The Logic Sensor reads RPM, stress, and overstressed status from kinetic blocks",
+    "logiclink.ponder.tag.sensor_fluids": "Fluid Storage",
+    "logiclink.ponder.tag.sensor_fluids.description": "The Logic Sensor reads fluid type, amount, and capacity from tanks and basins",
+    "logiclink.ponder.tag.sensor_heat": "Heat Sources",
+    "logiclink.ponder.tag.sensor_heat.description": "The Logic Sensor reads heat level from Blaze Burners",
+    "logiclink.ponder.tag.link_logistics": "Create Logistics",
+    "logiclink.ponder.tag.link_logistics.description": "The Logic Link bridges Create's logistics network with CC:Tweaked computers",
+    "logiclink.ponder.tag.link_sensors": "Logic Sensors",
+    "logiclink.ponder.tag.link_sensors.description": "Logic Sensors provide wireless machine data to any Logic Link on the same network",
+    "logiclink.ponder.tag.link_computers": "CC:Tweaked Computers",
+    "logiclink.ponder.tag.link_computers.description": "Place a CC:Tweaked computer adjacent to access the peripheral via Lua",
+    "logiclink.ponder.tag.rc_redstone_links": "Redstone Links",
+    "logiclink.ponder.tag.rc_redstone_links.description": "The Redstone Controller transmits and receives on Create's Redstone Link frequencies",
+    "logiclink.ponder.tag.rc_lamps": "Redstone Outputs",
+    "logiclink.ponder.tag.rc_lamps.description": "Control redstone-powered blocks like lamps and pistons wirelessly",
+
+    "logiclink.ponder.logic_link_overview.header": "Logic Link — Logistics Network Bridge",
+    "logiclink.ponder.logic_link_overview.text_1": "Create's logistics network connects storage and packagers",
+    "logiclink.ponder.logic_link_overview.text_2": "Right-click a Stock Link to copy its frequency, then place the Logic Link",
+    "logiclink.ponder.logic_link_overview.text_3": "Place a CC:Tweaked computer adjacent — it detects the Logic Link as a peripheral",
+    "logiclink.ponder.logic_link_overview.text_4": "14 Lua functions: list items, request deliveries, read sensors, monitor gauges",
+    "logiclink.ponder.logic_link_overview.text_5": "Access the entire network's inventory from a single computer",
+
+    "logiclink.ponder.logic_sensor_overview.header": "Logic Sensor — Machine Data Reader",
+    "logiclink.ponder.logic_sensor_overview.text_1": "Attach to a chest to read its inventory",
+    "logiclink.ponder.logic_sensor_overview.text_2": "Works with barrels, vaults, and any container",
+    "logiclink.ponder.logic_sensor_overview.text_3": "Mount on Create machines to read kinetic speed and stress",
+    "logiclink.ponder.logic_sensor_overview.text_4": "Reads inventory and fluid data from basins and tanks",
+    "logiclink.ponder.logic_sensor_overview.text_5": "Link sensors to a network for wireless access through any Logic Link",
+    "logiclink.ponder.logic_sensor_overview.text_6": "7 Lua functions — getData(), getTargetData(), refresh(), and more",
+
+    "logiclink.ponder.redstone_controller_overview.header": "Redstone Controller — Wireless Redstone",
+    "logiclink.ponder.redstone_controller_overview.text_1": "The Redstone Controller interfaces with Create's Redstone Link network",
+    "logiclink.ponder.redstone_controller_overview.text_2": "Control it from a CC:Tweaked computer via Lua scripts",
+    "logiclink.ponder.redstone_controller_overview.text_3": "Each frequency pair matches a physical Create Redstone Link",
+    "logiclink.ponder.redstone_controller_overview.text_4": "One block controls unlimited channels — replacing many physical Redstone Links",
+    "logiclink.ponder.redstone_controller_overview.text_5": "setOutput() transmits, getInput() receives — all controlled from Lua",
+    "logiclink.ponder.redstone_controller_overview.text_6": "8 Lua functions: setOutput, getInput, getChannels, setAllOutputs, and more",
+
+    "logiclink.ponder.tag.motor_kinetics": "Rotation Output",
+    "logiclink.ponder.tag.motor_kinetics.description": "Logic Motors generate or modify rotational force controlled by CC:Tweaked computers",
+    "logiclink.ponder.tag.motor_computers": "Computer Control",
+    "logiclink.ponder.tag.motor_computers.description": "Set speed, direction, and sequences from Lua programs",
+    "logiclink.ponder.tag.motor_sequences": "Sequenced Operations",
+    "logiclink.ponder.tag.motor_sequences.description": "Program timed rotation sequences with rotate, wait, and speed steps",
+
+    "logiclink.ponder.creative_logic_motor_overview.header": "Creative Logic Motor — Programmable Rotation Source",
+    "logiclink.ponder.creative_logic_motor_overview.text_1": "The Creative Logic Motor is a CC-controlled rotation source with unlimited stress capacity",
+    "logiclink.ponder.creative_logic_motor_overview.text_2": "Place a CC:Tweaked computer adjacent to control the motor via Lua",
+    "logiclink.ponder.creative_logic_motor_overview.text_3": "setSpeed(rpm) controls rotation from -256 to 256 RPM — no external power needed",
+    "logiclink.ponder.creative_logic_motor_overview.text_4": "Powers any Create machine — press, mixer, saw, fan, and more",
+    "logiclink.ponder.creative_logic_motor_overview.text_5": "Program sequences: rotate a set number of degrees, wait, then change speed",
+    "logiclink.ponder.creative_logic_motor_overview.text_6": "16 Lua functions: setSpeed, stop, rotate, addSequenceStep, runSequence, and more",
+
+    "logiclink.ponder.logic_motor_overview.header": "Logic Motor — Programmable Rotation Modifier",
+    "logiclink.ponder.logic_motor_overview.text_1": "The Logic Motor modifies rotation passing through it — controlled by a CC:Tweaked computer",
+    "logiclink.ponder.logic_motor_overview.text_2": "The ORANGE-marked side is the DRIVE INPUT — connect your power source (shaft, water wheel, etc.) here",
+    "logiclink.ponder.logic_motor_overview.text_3": "The LIGHT BLUE side is the CC OUTPUT — modified rotation exits here to your machines",
+    "logiclink.ponder.logic_motor_overview.text_4": "Attach a CC:Tweaked computer to control the motor via Lua peripheral functions",
+    "logiclink.ponder.logic_motor_overview.text_5": "setModifier(2.0) doubles output speed, setModifier(-1.0) reverses it — like a programmable gearshift",
+    "logiclink.ponder.logic_motor_overview.text_6": "17 Lua functions: enable, disable, setReversed, setModifier, addRotateStep, runSequence, and more"
 }
