feat: add standalone CTC controller port - Logic Remote with gamepad input, redstone link control, and frequency config GUI
- Port CTC's controller system as independent standalone code in LogicLink
- GamepadInputs: GLFW gamepad reader (15 buttons, 6 axes)
- ControllerOutput: Button/axis encoding for network packets
- LogicRemoteMenu: GhostItemMenu with 50 slots (15 buttons + 10 axes x 2 freq)
- LogicRemoteConfigScreen: CTC-matching GUI with tabs, joystick viz, digit displays
- 3 network payloads: RemoteButton, RemoteAxis, RemoteBind (NeoForge packets)
- RemoteServerHandler: Server-side redstone link integration via Create API
- RemoteClientHandler: Client-side gamepad polling, active/bind mode management
- Rewrite LogicRemoteItem as MenuProvider with bind mode and active mode
- Copy CTC assets: 3D model, GUI textures, icon/digit atlases
- Add lang entries for all GUI tooltips and frequency slot names

--- a/src/main/resources/assets/logiclink/lang/en_us.json
+++ b/src/main/resources/assets/logiclink/lang/en_us.json
@@ -100,6 +100,16 @@
     "logiclink.logic_remote.tooltip.instructions2": "§eCLICK drive/motor to add target",
     "logiclink.logic_remote.tooltip.instructions3": "§eSNEAK+CLICK air to clear all",
 
+    "logiclink.gui_button_refresh": "Refresh Gamepad",
+    "logiclink.gui_device_prev": "Previous Gamepad",
+    "logiclink.gui_device_next": "Next Gamepad",
+    "logiclink.gui_tab_button": "Buttons",
+    "logiclink.gui_tab_axis": "Axes",
+    "logiclink.gui_gamepad_unavailable": "No Gamepad Detected",
+    "logiclink.gui_gamepad_selected": "Gamepad %s",
+    "logiclink.logic_remote.frequency_slot_1": "Frequency 1 (%s)",
+    "logiclink.logic_remote.frequency_slot_2": "Frequency 2 (%s)",
+
     "logiclink.contraption_remote.status.header": "§6=== Contraption Remote Status ===",
     "logiclink.contraption_remote.status.lectern": "§aLectern: %s",
     "logiclink.contraption_remote.status.no_lectern": "§7No lectern linked",
